# termal

./: .gitignore  .msafara.config  .termalconfig  CHANGELOG.md  Cargo.toml  Makefile  README.crates.md  README.md  features.md  justfile  newick2box.py  release-SOP.md  release-params.txt  roadmap.md  termal.md  tools.config  userguide.md  wishlist.md
data/: OX_OFA-pg2.msa  OX_OFA-pg2.msa.treefile  OX_OFA-pg2.order  PF00571-jagged.sto  PF00571.sto  search_colors.json  test-clustal.aln  test-ordering.fas  test_r2s.msa
manuscript/: Makefile  abstract.tex  body.tex  cover_letter.tex  decision-letter.txt  rev-req-TODO.md  rev-req-response.md  termal.bib  termal.tex
src/: alignment.rs  app.rs  errors.rs  lib.rs  main.rs  runner.rs  seq.rs  session.rs  tree.rs  ui.rs
src/app/: tests.rs
src/seq/: clustal.rs  fasta.rs  file.rs  record.rs  stockholm.rs
src/ui/: aln_widget.rs  barchart.rs  bindings.md  color_map.rs  color_scheme.rs  key_handling.rs  line_editor.rs  msg_theme.rs  notes_editor.rs  render.rs  style.rs  svg.rs  zoombox.rs
tests/: smoke_render.rs  test_lbl_search.rs  test_motion.rs  utils.rs
tests/common/: mod.rs  utils.rs
