[package]
name = "msafara"
version = "0.3.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/pmcarlton/msafara"
readme = "README.crates.md"
description = "View, edit, and explore multiple sequence alignments in your terminal"
keywords = ["multiple sequence alignment", "msa", "bioinformatics", "viewer", "terminal", "TUI"]
categories = ["science::bioinformatics", "science::bioinformatics::sequence-analysis", "command-line-utilities"]
include = ["**/*.rs", "src/ui/bindings.md", "Cargo.toml", "README.crates.md", "data/example-1.msa", "data/CD00377_ICL-PEPM_wDesc.msa", "data/PF00244.26.sto", "data/OX_OFA-pg2.msa", "data/OX_OFA-pg2.order"]
#homepage: no page other than repo
rust-version = "1.79" # May compile with earlier ones, but not checked.

[[bin]]
name = "msafara"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.21"
env_logger = "0.11.3"
crossterm = "0.28.1"
ratatui = "0.29"
clap = { version = "4.5.4", features = ["derive", "cargo"] }
bitflags = "2.6.0"
serde_json = "1.0.135"
serde = { version = "1.0.217", features = ["derive"] }
hex_color = "3"
itertools = "0.13.0"
regex = "1.12.2"

[dev-dependencies]
insta = "1"
approx = "0.3.2"    # needed for testing vec_f64_aux
